# research

Mining/: .gitignore  README.md  manual_check.md  rust_ast.md  聚类指标.md
Mining/code/: .gitignore  123.txt  build_vectors.py  cluster_vectors.py  commits.txt  commits1.txt  draw_pic.py  gen_ast.py  gen_diff.py  get_commit_hash.py  hac.txt  main  process.py  repos.txt  repos1.txt  repos2.txt  search.py  tes.py  test.rs  test1.txt  test2.txt  ttt.py  tttt.rs  type.py  vector.csv  vector1.csv  vector2.csv  vector_test.csv  view.py
Mining/code/Commits/: rust-lua53.txt  workers-rs.txt
Mining/code/cluster_results/: db_scan.txt  hac.txt
Mining/code/code_to_ast/: Cargo.toml  process.py
Mining/code/code_to_ast/src/: main.rs
Mining/code/demos/: README.md  test1_after.rs  test1_before.rs  text.txt
Mining/code/difftastic/: Cargo.toml
Mining/code/difftastic/src/: main.rs
Mining/code/get_tree/: Cargo.toml  build.rs
Mining/code/get_tree/src/: main.rs  tree.rs
Mining/code/results/: hac.txt
Mining/code/test_code/: Cargo.toml
Mining/related work/: DIscovering bug patterns in JavaScript.md  FixMiner.md  JavaDL.md  python.md
Rust学习/: rust_learning.md  sample.cpp  sample.rs
Rust语料库/: merged(topics&stars).csv
readPapers/: 三种途径：运行前检查、出现问题后tolerate、产生危害后debug.md
readPapers/MirChecker/: MirChecker.md
readPapers/SafeDrop/: safeDrop.pptx  safedrop.md
readPapers/Stacked_borrows/: Stacked_borrows.md
readPapers/mining/: Mining Fine-Grained Code Changes to Detect Unknown Change Patterns.md
readPapers/safer_at_any_speed/: NADER.md
(+10149 files in other folders)
