cargo-features = ["edition2021"]

[package]
name = "code_to_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-ap-rustc_lexer = "727.0.0"
# rustc_parse = {path = "../rust-master/compiler/rustc_parse"}
# rustc_driver = {path = "../rust-master/compiler/rustc_driver"}
# rustc-ap-rustc_parse = "727.0.0"