# cargo-features = ["edition2021"]

[package]
name = "code_to_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-ap-rustc_lexer = "727.0.0"
rustc_parse = {path = "../../../..//rust/compiler/rustc_parse"}
syn = { version = "1.0.107", features = ["full", "extra-traits"] }
gag = "1.0.0"